# openThalis

./: .cursorignore  .gitignore  LICENCE  NOTICEME.md  README.md  REQUIREMENTS.txt  template.env
interface/: Cargo.toml
interface/src/: main.rs
interface/src/programs/eidos/chats/: chats.css  chats.html  chats.js
interface/src/programs/eidos/chats/css/: base.css  buttons.css  errors.css  (+6 more)
interface/src/programs/eidos/eido/: eido.css  eido.html  eido.js
interface/src/programs/eidos/tasks/: tasks.css  tasks.html  tasks.js
interface/src/programs/envs/aether/: aether.css  aether.html  aether.js
interface/src/programs/envs/local/: .dev_notes_local.md  local.css  local.html  local.js
interface/src/programs/envs/spaces/: spaces.css  spaces.html
interface/src/programs/system/home/: home.css  home.html  home.js
interface/src/programs/system/settings/: settings.css  settings.html  settings.js
interface/src/scaffold/: index.css  index.html  index.js
interface/src/scaffold/components/bottom_component/: bottom_component.css  bottom_component.html  bottom_component.js
interface/src/scaffold/components/center_component/: center_component.css  center_component.js
interface/src/scaffold/components/left_component/: left_component.css  left_component.html  left_component.js
interface/src/scaffold/components/right_component/: right_component.css  right_component.js
interface/src/scaffold/components/top_bar/: top_bar.css  top_bar.html  top_bar.js
interface/src/scaffold/shared/config/: config.js  websocket.js
interface/src/scaffold/shared/http/: httpClient.js
(+257 files in other folders)
